# detector_pkg

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
detector_pkg/: CMakeLists.txt  package.xml
detector_pkg/src/: detector.cpp
examples/train_dir/: output_labels.txt
kobuki_exploration/: CMakeLists.txt  package.xml
kobuki_exploration/src/: explore.py
launch/: base_local_planner_params.yaml  explore_costmap.yaml
launch/environment_descriptor/: my-ed-config.yaml
launch/frontier_exploration/: .frontier_global_map.launch.swp  frontier_global_map.launch
launch/move_base/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base.launch
launch/sensor/: depthimg_to_laser.launch
src/: detector.cpp
